--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
